--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,72 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from numpy.random import seed\n",
-    "seed(2)"
+    "seed(2)\n",
+    "df = pd.read_csv(\"credit_card_default_train.csv\", header=0)\n",
+    "#features=list(df.columns[:])\n",
+    "#features"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# ['Client_ID', \n",
+    " 'Balance_Limit_V1',\n",
+    " 'Gender',\n",
+    " 'EDUCATION_STATUS',\n",
+    " 'MARITAL_STATUS',\n",
+    " 'AGE',\n",
+    " 'PAY_JULY',\n",
+    " 'PAY_AUG',\n",
+    " 'PAY_SEP',\n",
+    " 'PAY_OCT',\n",
+    " 'PAY_NOV',\n",
+    " 'PAY_DEC',\n",
+    " 'DUE_AMT_JULY',\n",
+    " 'DUE_AMT_AUG',\n",
+    " 'DUE_AMT_SEP',\n",
+    " 'DUE_AMT_OCT',\n",
+    " 'DUE_AMT_NOV',\n",
+    " 'DUE_AMT_DEC',\n",
+    " 'PAID_AMT_JULY',\n",
+    " 'PAID_AMT_AUG',\n",
+    " 'PAID_AMT_SEP',\n",
+    " 'PAID_AMT_OCT',\n",
+    " 'PAID_AMT_NOV',\n",
+    " 'PAID_AMT_DEC',\n",
+    " 'NEXT_MONTH_DEFAULT']\n",
+    "\n",
+    "['Client_ID',\n",
+    " 'Balance_Limit_V1', 0\n",
+    " 'Gender',           1\n",
+    " 'EDUCATION_STATUS', 2\n",
+    " 'MARITAL_STATUS',   3\n",
+    " 'AGE',              4\n",
+    " 'PAY_JULY',         5\n",
+    " 'PAY_AUG',          6\n",
+    " 'PAY_SEP',          7\n",
+    " 'PAY_OCT',          8\n",
+    " 'PAY_NOV',          9\n",
+    " 'PAY_DEC',          10\n",
+    " 'DUE_AMT_JULY',     11\n",
+    " 'DUE_AMT_AUG',      12\n",
+    " 'DUE_AMT_SEP',      13\n",
+    " 'DUE_AMT_OCT',      14\n",
+    " 'DUE_AMT_NOV',      15\n",
+    " 'DUE_AMT_DEC',      16\n",
+    " 'PAID_AMT_JULY',    17\n",
+    " 'PAID_AMT_AUG',     18\n",
+    " 'PAID_AMT_SEP',     19\n",
+    " 'PAID_AMT_OCT',     20\n",
+    " 'PAID_AMT_NOV',     21\n",
+    " 'PAID_AMT_DEC',     22\n",
+    " 'NEXT_MONTH_DEFAULT'] 23"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +102,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Client_ID</th>\n",
        "      <th>Balance_Limit_V1</th>\n",
        "      <th>Gender</th>\n",
        "      <th>EDUCATION_STATUS</th>\n",
@@ -52,6 +111,7 @@
        "      <th>PAY_AUG</th>\n",
        "      <th>PAY_SEP</th>\n",
        "      <th>PAY_OCT</th>\n",
+       "      <th>PAY_NOV</th>\n",
        "      <th>...</th>\n",
        "      <th>DUE_AMT_SEP</th>\n",
        "      <th>DUE_AMT_OCT</th>\n",
@@ -68,12 +128,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>A2</td>\n",
        "      <td>1M</td>\n",
        "      <td>M</td>\n",
        "      <td>Graduate</td>\n",
        "      <td>Other</td>\n",
        "      <td>31-45</td>\n",
+       "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -92,13 +152,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>A3</td>\n",
        "      <td>1M</td>\n",
        "      <td>F</td>\n",
        "      <td>High School</td>\n",
        "      <td>Other</td>\n",
        "      <td>Less than 30</td>\n",
        "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -116,7 +176,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>A4</td>\n",
        "      <td>100K</td>\n",
        "      <td>F</td>\n",
        "      <td>High School</td>\n",
@@ -126,6 +185,7 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
+       "      <td>-2</td>\n",
        "      <td>...</td>\n",
        "      <td>15477</td>\n",
        "      <td>0</td>\n",
@@ -140,13 +200,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>A5</td>\n",
        "      <td>200K</td>\n",
        "      <td>F</td>\n",
        "      <td>Graduate</td>\n",
        "      <td>Single</td>\n",
        "      <td>31-45</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -164,7 +224,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>A6</td>\n",
        "      <td>1M</td>\n",
        "      <td>F</td>\n",
        "      <td>Graduate</td>\n",
@@ -172,6 +231,7 @@
        "      <td>31-45</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -212,12 +272,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>23995</td>\n",
-       "      <td>A29996</td>\n",
        "      <td>1M</td>\n",
        "      <td>F</td>\n",
        "      <td>High School</td>\n",
        "      <td>Single</td>\n",
        "      <td>31-45</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -236,7 +296,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>23996</td>\n",
-       "      <td>A29997</td>\n",
        "      <td>400K</td>\n",
        "      <td>F</td>\n",
        "      <td>High School</td>\n",
@@ -246,6 +305,7 @@
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>8090</td>\n",
        "      <td>20741</td>\n",
@@ -260,7 +320,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>23997</td>\n",
-       "      <td>A29998</td>\n",
        "      <td>100K</td>\n",
        "      <td>F</td>\n",
        "      <td>Other</td>\n",
@@ -270,6 +329,7 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>-1</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>6371</td>\n",
        "      <td>48228</td>\n",
@@ -284,7 +344,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>23998</td>\n",
-       "      <td>A29999</td>\n",
        "      <td>200K</td>\n",
        "      <td>F</td>\n",
        "      <td>High School</td>\n",
@@ -292,6 +351,7 @@
        "      <td>31-45</td>\n",
        "      <td>1</td>\n",
        "      <td>-1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -308,12 +368,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>23999</td>\n",
-       "      <td>A30000</td>\n",
        "      <td>200K</td>\n",
        "      <td>F</td>\n",
        "      <td>Other</td>\n",
        "      <td>Single</td>\n",
        "      <td>46-65</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -332,35 +392,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>24000 rows × 24 columns</p>\n",
+       "<p>24000 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Client_ID Balance_Limit_V1 Gender EDUCATION_STATUS MARITAL_STATUS  \\\n",
-       "0            A2               1M      M         Graduate          Other   \n",
-       "1            A3               1M      F      High School          Other   \n",
-       "2            A4             100K      F      High School         Single   \n",
-       "3            A5             200K      F         Graduate         Single   \n",
-       "4            A6               1M      F         Graduate          Other   \n",
-       "...         ...              ...    ...              ...            ...   \n",
-       "23995    A29996               1M      F      High School         Single   \n",
-       "23996    A29997             400K      F      High School          Other   \n",
-       "23997    A29998             100K      F            Other          Other   \n",
-       "23998    A29999             200K      F      High School         Single   \n",
-       "23999    A30000             200K      F            Other         Single   \n",
+       "      Balance_Limit_V1 Gender EDUCATION_STATUS MARITAL_STATUS           AGE  \\\n",
+       "0                   1M      M         Graduate          Other         31-45   \n",
+       "1                   1M      F      High School          Other  Less than 30   \n",
+       "2                 100K      F      High School         Single         31-45   \n",
+       "3                 200K      F         Graduate         Single         31-45   \n",
+       "4                   1M      F         Graduate          Other         31-45   \n",
+       "...                ...    ...              ...            ...           ...   \n",
+       "23995               1M      F      High School         Single         31-45   \n",
+       "23996             400K      F      High School          Other         31-45   \n",
+       "23997             100K      F            Other          Other         31-45   \n",
+       "23998             200K      F      High School         Single         31-45   \n",
+       "23999             200K      F            Other         Single         46-65   \n",
        "\n",
-       "                AGE  PAY_JULY  PAY_AUG  PAY_SEP  PAY_OCT  ...  DUE_AMT_SEP  \\\n",
-       "0             31-45        -1       -1       -1       -1  ...         6004   \n",
-       "1      Less than 30         0       -1       -1       -1  ...        26948   \n",
-       "2             31-45         4        3        2        2  ...        15477   \n",
-       "3             31-45         2        0        0        0  ...        95193   \n",
-       "4             31-45         2        2        0        0  ...       429785   \n",
-       "...             ...       ...      ...      ...      ...  ...          ...   \n",
-       "23995         31-45         0        0        0        0  ...       481323   \n",
-       "23996         31-45        -1       -1       -1       -1  ...         8090   \n",
-       "23997         31-45         4        3        2       -1  ...         6371   \n",
-       "23998         31-45         1       -1        0        0  ...       176262   \n",
-       "23999         46-65         0        0        0        0  ...       114955   \n",
+       "       PAY_JULY  PAY_AUG  PAY_SEP  PAY_OCT  PAY_NOV  ...  DUE_AMT_SEP  \\\n",
+       "0            -1       -1       -1       -1       -1  ...         6004   \n",
+       "1             0       -1       -1       -1       -1  ...        26948   \n",
+       "2             4        3        2        2       -2  ...        15477   \n",
+       "3             2        0        0        0        0  ...        95193   \n",
+       "4             2        2        0        0        0  ...       429785   \n",
+       "...         ...      ...      ...      ...      ...  ...          ...   \n",
+       "23995         0        0        0        0        0  ...       481323   \n",
+       "23996        -1       -1       -1       -1        0  ...         8090   \n",
+       "23997         4        3        2       -1        0  ...         6371   \n",
+       "23998         1       -1        0        0        0  ...       176262   \n",
+       "23999         0        0        0        0        0  ...       114955   \n",
        "\n",
        "       DUE_AMT_OCT  DUE_AMT_NOV  DUE_AMT_DEC  PAID_AMT_JULY  PAID_AMT_AUG  \\\n",
        "0            39418       162772       -13982           3437          6004   \n",
@@ -388,19 +448,223 @@
        "23998          2721          4449        122347          4167  \n",
        "23999          3303          2310          2310          2310  \n",
        "\n",
-       "[24000 rows x 24 columns]"
+       "[24000 rows x 23 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"credit_card_default_train.csv\", header=0)\n",
-    "X=df.iloc[:,0:24]\n",
+    "X=df.iloc[:,1:24]\n",
     "y=df.iloc[:,24:25]\n",
     "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Balance_Limit_V1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>100K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>200K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23995</td>\n",
+       "      <td>1M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23996</td>\n",
+       "      <td>400K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23997</td>\n",
+       "      <td>100K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23998</td>\n",
+       "      <td>200K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23999</td>\n",
+       "      <td>200K</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>24000 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Balance_Limit_V1\n",
+       "0                   1M\n",
+       "1                   1M\n",
+       "2                 100K\n",
+       "3                 200K\n",
+       "4                   1M\n",
+       "...                ...\n",
+       "23995               1M\n",
+       "23996             400K\n",
+       "23997             100K\n",
+       "23998             200K\n",
+       "23999             200K\n",
+       "\n",
+       "[24000 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1=X.iloc[:,0:1]\n",
+    "X2=X.iloc[:,1:2]\n",
+    "X3=X.iloc[:,2:3]\n",
+    "X4=X.iloc[:,3:4]\n",
+    "X5=X.iloc[:,4:5]\n",
+    "X6=X.iloc[:,5:6]\n",
+    "X7=X.iloc[:,6:7]\n",
+    "X8=X.iloc[:,7:8]\n",
+    "X9=X.iloc[:,8:9]\n",
+    "X10=X.iloc[:,9:10]\n",
+    "X11=X.iloc[:,10:11]\n",
+    "X12=X.iloc[:,11:12]\n",
+    "X13=X.iloc[:,12:13]\n",
+    "X14=X.iloc[:,13:14]\n",
+    "X15=X.iloc[:,14:15]\n",
+    "X16=X.iloc[:,15:16]\n",
+    "X17=X.iloc[:,16:17]\n",
+    "X18=X.iloc[:,17:18]\n",
+    "X19=X.iloc[:,18:19]\n",
+    "X20=X.iloc[:,19:20]\n",
+    "X21=X.iloc[:,20:21]\n",
+    "X22=X.iloc[:,21:22]\n",
+    "X23=X.iloc[:,22:23]\n",
+    "X1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "from numpy import argmax\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "#X1\n",
+    "values = array(X1)\n",
+    "label_encoder = LabelEncoder()\n",
+    "X1 = label_encoder.fit_transform(values)\n",
+    "X1=pd.DataFrame(X1, columns=['Balance_Limit_V1'])\n",
+    "\n",
+    "#X2\n",
+    "values = array(X2)\n",
+    "label_encoder = LabelEncoder()\n",
+    "X2 = label_encoder.fit_transform(values)\n",
+    "X2=pd.DataFrame(X2, columns=['Gender'])\n",
+    "\n",
+    "#X3\n",
+    "values = array(X3)\n",
+    "label_encoder = LabelEncoder()\n",
+    "X3 = label_encoder.fit_transform(values)\n",
+    "X3=pd.DataFrame(X3, columns=['EDUCATION_STATUS'])\n",
+    "\n",
+    "#X4\n",
+    "values = array(X4)\n",
+    "label_encoder = LabelEncoder()\n",
+    "X4 = label_encoder.fit_transform(values)\n",
+    "X4=pd.DataFrame(X4, columns=['MARITAL_STATUS'])\n",
+    "\n",
+    "#X5\n",
+    "values = array(X5)\n",
+    "label_encoder = LabelEncoder()\n",
+    "X5 = label_encoder.fit_transform(values)\n",
+    "X5=pd.DataFrame(X5, columns=['AGE'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=np.append(X1,X2,axis=1)\n",
+    "X=np.append(X,X3,axis=1)\n",
+    "X=np.append(X,X4,axis=1)\n",
+    "X=np.append(X,X5,axis=1)\n",
+    "X=np.append(X,X6,axis=1)\n",
+    "X=np.append(X,X7,axis=1)\n",
+    "X=np.append(X,X8,axis=1)\n",
+    "X=np.append(X,X9,axis=1)\n",
+    "X=np.append(X,X10,axis=1)\n",
+    "X=np.append(X,X11,axis=1)\n",
+    "X=np.append(X,X12,axis=1)\n",
+    "X=np.append(X,X13,axis=1)\n",
+    "X=np.append(X,X14,axis=1)\n",
+    "X=np.append(X,X15,axis=1)\n",
+    "X=np.append(X,X16,axis=1)\n",
+    "X=np.append(X,X17,axis=1)\n",
+    "X=np.append(X,X18,axis=1)\n",
+    "X=np.append(X,X19,axis=1)\n",
+    "X=np.append(X,X20,axis=1)\n",
+    "X=np.append(X,X21,axis=1)\n",
+    "X=np.append(X,X22,axis=1)\n",
+    "X=np.append(X,X23,axis=1)\n",
+    "\n",
+    "datacreated=np.append(X,y,axis=1)\n",
+    "\n",
+    "dataset=pd.DataFrame(datacreated, columns=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23])\n",
+    "dataset.to_csv('train_preprocessed.csv')"
    ]
   },
   {
