--- a/Model.ipynb
+++ b/Model.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,26 +424,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\AkeshalaMarasinghe\\.conda\\envs\\HackStat2.0\\lib\\site-packages\\ipykernel_launcher.py:4: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  after removing the cwd from sys.path.\n"
+      "C:\\Users\\AkeshalaMarasinghe\\.conda\\envs\\HackStat2.0\\lib\\site-packages\\sklearn\\utils\\validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "clf=RandomForestClassifier(n_estimators=350,max_features=22,class_weight='balanced',random_state=0,\n",
-    "                          max_depth=8)\n",
-    "clf.fit(x_train, y_train)\n",
-    "\n",
-    "y_pred=clf.predict(x_validation)\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "ada_clf = AdaBoostClassifier(DecisionTreeClassifier(max_depth=9), n_estimators=300,algorithm=\"SAMME.R\", learning_rate=0.0095)\n",
+    "ada_clf.fit(x_train,y_train)\n",
     "from sklearn import metrics\n",
     "\n",
-    "print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))"
+    "df = pd.read_csv('test_preprocessed.csv', header=0)\n",
+    "x_validation=df.iloc[:,1:24]\n",
+    "\n",
+    "\n",
+    "y_pred = ada_clf.predict(x_validation)\n",
+    "#print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
+    "#print(classification_report(y_validation,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('credit_card_default_train.csv', header=0)\n",
+    "id_num=df.iloc[:,0:1]\n",
+    "df=pd.DataFrame({'NEXT_MONTH_DEFAULT':y_pred})\n",
+    "df.to_csv('Submit.csv',index=False)"
    ]
   },
   {
@@ -451,16 +474,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "ada_clf = AdaBoostClassifier(DecisionTreeClassifier(max_depth=9), n_estimators=300,algorithm=\"SAMME.R\", learning_rate=0.0095)\n",
-    "ada_clf.fit(x_train_new,y_train_new)\n",
-    "from sklearn import metrics\n",
-    "y_pred = ada_clf.predict(x_validation)\n",
-    "print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
-    "print(classification_report(y_validation,y_pred))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
