--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,370 +18,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6004</td>\n",
-       "      <td>39418</td>\n",
-       "      <td>162772</td>\n",
-       "      <td>-13982</td>\n",
-       "      <td>3437</td>\n",
-       "      <td>6004</td>\n",
-       "      <td>39418</td>\n",
-       "      <td>162772</td>\n",
-       "      <td>0</td>\n",
-       "      <td>538165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>26948</td>\n",
-       "      <td>43530</td>\n",
-       "      <td>80811</td>\n",
-       "      <td>124590</td>\n",
-       "      <td>151818</td>\n",
-       "      <td>46200</td>\n",
-       "      <td>43530</td>\n",
-       "      <td>80811</td>\n",
-       "      <td>942</td>\n",
-       "      <td>33666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>15477</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>95193</td>\n",
-       "      <td>97309</td>\n",
-       "      <td>100353</td>\n",
-       "      <td>102740</td>\n",
-       "      <td>3855</td>\n",
-       "      <td>3890</td>\n",
-       "      <td>3696</td>\n",
-       "      <td>4620</td>\n",
-       "      <td>4049</td>\n",
-       "      <td>3918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>429785</td>\n",
-       "      <td>435354</td>\n",
-       "      <td>445271</td>\n",
-       "      <td>453899</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20790</td>\n",
-       "      <td>16170</td>\n",
-       "      <td>17325</td>\n",
-       "      <td>16401</td>\n",
-       "      <td>17325</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>23995</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>481323</td>\n",
-       "      <td>203289</td>\n",
-       "      <td>72157</td>\n",
-       "      <td>36914</td>\n",
-       "      <td>19635</td>\n",
-       "      <td>46200</td>\n",
-       "      <td>11557</td>\n",
-       "      <td>7039</td>\n",
-       "      <td>11550</td>\n",
-       "      <td>2310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>23996</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8090</td>\n",
-       "      <td>20741</td>\n",
-       "      <td>11989</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4243</td>\n",
-       "      <td>8145</td>\n",
-       "      <td>20785</td>\n",
-       "      <td>298</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>23997</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6371</td>\n",
-       "      <td>48228</td>\n",
-       "      <td>47544</td>\n",
-       "      <td>44715</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50820</td>\n",
-       "      <td>9702</td>\n",
-       "      <td>4620</td>\n",
-       "      <td>7161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>23998</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>176262</td>\n",
-       "      <td>121908</td>\n",
-       "      <td>27385</td>\n",
-       "      <td>113061</td>\n",
-       "      <td>198429</td>\n",
-       "      <td>7875</td>\n",
-       "      <td>2721</td>\n",
-       "      <td>4449</td>\n",
-       "      <td>122347</td>\n",
-       "      <td>4167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>23999</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>114955</td>\n",
-       "      <td>84396</td>\n",
-       "      <td>74909</td>\n",
-       "      <td>35373</td>\n",
-       "      <td>4800</td>\n",
-       "      <td>4158</td>\n",
-       "      <td>3303</td>\n",
-       "      <td>2310</td>\n",
-       "      <td>2310</td>\n",
-       "      <td>2310</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>24000 rows × 23 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       0  1  2  3  4  5  6  7  8  9  ...      13      14      15      16  \\\n",
-       "0      3  1  0  0  0 -1 -1 -1 -1 -1  ...    6004   39418  162772  -13982   \n",
-       "1      3  0  1  0  2  0 -1 -1 -1 -1  ...   26948   43530   80811  124590   \n",
-       "2      2  0  1  1  0  4  3  2  2 -2  ...   15477       0       0       0   \n",
-       "3      5  0  0  1  0  2  0  0  0  0  ...   95193   97309  100353  102740   \n",
-       "4      3  0  0  0  0  2  2  0  0  0  ...  429785  435354  445271  453899   \n",
-       "...   .. .. .. .. .. .. .. .. .. ..  ...     ...     ...     ...     ...   \n",
-       "23995  3  0  1  1  0  0  0  0  0  0  ...  481323  203289   72157   36914   \n",
-       "23996  7  0  1  0  0 -1 -1 -1 -1  0  ...    8090   20741   11989       0   \n",
-       "23997  2  0  2  0  0  4  3  2 -1  0  ...    6371   48228   47544   44715   \n",
-       "23998  5  0  1  1  0  1 -1  0  0  0  ...  176262  121908   27385  113061   \n",
-       "23999  5  0  2  1  1  0  0  0  0  0  ...  114955   84396   74909   35373   \n",
-       "\n",
-       "           17     18     19      20      21      22  \n",
-       "0        3437   6004  39418  162772       0  538165  \n",
-       "1      151818  46200  43530   80811     942   33666  \n",
-       "2           0      0      0       0       0       0  \n",
-       "3        3855   3890   3696    4620    4049    3918  \n",
-       "4           0  20790  16170   17325   16401   17325  \n",
-       "...       ...    ...    ...     ...     ...     ...  \n",
-       "23995   19635  46200  11557    7039   11550    2310  \n",
-       "23996    4243   8145  20785     298       0       0  \n",
-       "23997       0      0  50820    9702    4620    7161  \n",
-       "23998  198429   7875   2721    4449  122347    4167  \n",
-       "23999    4800   4158   3303    2310    2310    2310  \n",
-       "\n",
-       "[24000 rows x 23 columns]"
+       "array([[-0.30092391,  0.8122506 , -1.24815817, ...,  4.18104102,\n",
+       "        -0.31006424, 12.42072795],\n",
+       "       [-0.30092391, -1.23114714, -0.14355269, ...,  1.91980909,\n",
+       "        -0.28392667,  0.50462908],\n",
+       "       [-0.75938729, -1.23114714, -0.14355269, ..., -0.30969535,\n",
+       "        -0.31006424, -0.29055066],\n",
+       "       ...,\n",
+       "       [-0.75938729, -1.23114714,  0.9610528 , ..., -0.0420257 ,\n",
+       "        -0.18187359, -0.12141022],\n",
+       "       [ 0.61600287, -1.23114714, -0.14355269, ..., -0.18695135,\n",
+       "         3.08468491, -0.19212751],\n",
+       "       [ 0.61600287, -1.23114714,  0.9610528 , ..., -0.24596448,\n",
+       "        -0.24596892, -0.23598923]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "df = pd.read_csv('train_preprocessed.csv', header=0)\n",
     "X=df.iloc[:,1:24]\n",
     "y=df.iloc[:,24:25]\n",
-    "X"
+    "\n",
+    "sc = StandardScaler()\n",
+    "X = sc.fit_transform(X)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from sklearn.utils import shuffle\n",
     "import matplotlib.pyplot as plt\n",
@@ -412,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,36 +101,81 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#RandomForestGridsearch\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "rfc = RandomForestClassifier()\n",
+    "parameters = {\n",
+    "    \"n_estimators\":[5,10,50,100,250],\n",
+    "    \"max_depth\":[2,4,8,16,32,None],\n",
+    "}\n",
+    "cv = GridSearchCV(rfc,parameters,cv=5)\n",
+    "cv.fit(x_train, y_train)\n",
+    "\n",
+    "#validation\n",
+    "y_pred = cv.predict(x_validation)\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
+    "print(confusion_matrix(y_validation,y_pred))\n",
+    "print(classification_report(y_validation,y_pred))\n",
+    "\n",
+    "#test\n",
+    "df = pd.read_csv('test_preprocessed.csv', header=0)\n",
+    "x_validation_test=df.iloc[:,1:24]\n",
+    "y_pred_test = ada_clf.predict(x_validation_test)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\AkeshalaMarasinghe\\.conda\\envs\\HackStat2.0\\lib\\site-packages\\sklearn\\utils\\validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#RandomForestClassifier\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "clf=RandomForestClassifier(n_estimators=100,max_features='auto',random_state=0,\n",
+    "                          max_depth=10)\n",
+    "clf.fit(x_train,y_train)\n",
+    "\n",
+    "#validation\n",
+    "y_pred = clf.predict(x_validation)\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
+    "print(confusion_matrix(y_validation,y_pred))\n",
+    "print(classification_report(y_validation,y_pred))\n",
+    "\n",
+    "#test\n",
+    "df = pd.read_csv('test_preprocessed.csv', header=0)\n",
+    "x_validation_test=df.iloc[:,1:24]\n",
+    "y_pred_test = ada_clf.predict(x_validation_test)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#AdaBoostClassifier\n",
+    "\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "ada_clf = AdaBoostClassifier(DecisionTreeClassifier(max_depth=9), n_estimators=300,algorithm=\"SAMME.R\", learning_rate=0.0095)\n",
-    "ada_clf.fit(x_train,y_train)\n",
     "from sklearn import metrics\n",
     "\n",
-    "df = pd.read_csv('test_preprocessed.csv', header=0)\n",
-    "x_validation=df.iloc[:,1:24]\n",
+    "ada_clf = AdaBoostClassifier(DecisionTreeClassifier(max_depth=9), n_estimators=300,algorithm=\"SAMME.R\", learning_rate=0.0095)\n",
+    "ada_clf.fit(x_train,y_train)\n",
     "\n",
-    "\n",
+    "#validation\n",
     "y_pred = ada_clf.predict(x_validation)\n",
-    "#print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
-    "#print(classification_report(y_validation,y_pred))"
+    "print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
+    "print(confusion_matrix(y_validation,y_pred))\n",
+    "print(classification_report(y_validation,y_pred))\n",
+    "\n",
+    "#test\n",
+    "df = pd.read_csv('test_preprocessed.csv', header=0)\n",
+    "x_validation_test=df.iloc[:,1:24]\n",
+    "y_pred_test = ada_clf.predict(x_validation_test)\n"
    ]
   },
   {
@@ -463,10 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('credit_card_default_train.csv', header=0)\n",
-    "id_num=df.iloc[:,0:1]\n",
-    "df=pd.DataFrame({'NEXT_MONTH_DEFAULT':y_pred})\n",
-    "df.to_csv('Submit.csv',index=False)"
+    "df_test=pd.DataFrame({'NEXT_MONTH_DEFAULT':y_pred_test})\n",
+    "df_test.to_csv('Submissions/Submit2.csv',index=False)"
    ]
   },
   {
