--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,14 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.impute import SimpleImputer\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from numpy.random import seed\n",
@@ -18,41 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.30092391,  0.8122506 , -1.24815817, ...,  4.18104102,\n",
-       "        -0.31006424, 12.42072795],\n",
-       "       [-0.30092391, -1.23114714, -0.14355269, ...,  1.91980909,\n",
-       "        -0.28392667,  0.50462908],\n",
-       "       [-0.75938729, -1.23114714, -0.14355269, ..., -0.30969535,\n",
-       "        -0.31006424, -0.29055066],\n",
-       "       ...,\n",
-       "       [-0.75938729, -1.23114714,  0.9610528 , ..., -0.0420257 ,\n",
-       "        -0.18187359, -0.12141022],\n",
-       "       [ 0.61600287, -1.23114714, -0.14355269, ..., -0.18695135,\n",
-       "         3.08468491, -0.19212751],\n",
-       "       [ 0.61600287, -1.23114714,  0.9610528 , ..., -0.24596448,\n",
-       "        -0.24596892, -0.23598923]])"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "df = pd.read_csv('train_preprocessed.csv', header=0)\n",
+    "df_test = pd.read_csv('test_preprocessed.csv', header=0)\n",
+    "\n",
     "X=df.iloc[:,1:24]\n",
     "y=df.iloc[:,24:25]\n",
+    "X_validation_test=df_test.iloc[:,1:24]\n",
     "\n",
     "sc = StandardScaler()\n",
-    "X = sc.fit_transform(X)"
+    "X = sc.fit_transform(X)\n",
+    "x_validation_test = sc.fit_transform(X_validation_test)"
    ]
   },
   {
@@ -88,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,10 +76,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#RandomForestGridsearch\n",
     "\n",
@@ -123,9 +100,9 @@
     "print(classification_report(y_validation,y_pred))\n",
     "\n",
     "#test\n",
-    "df = pd.read_csv('test_preprocessed.csv', header=0)\n",
-    "x_validation_test=df.iloc[:,1:24]\n",
-    "y_pred_test = ada_clf.predict(x_validation_test)\n"
+    "y_pred_test = cv.predict(x_validation_test)\n",
+    "\n",
+    "#normal - 0.89 0.47"
    ]
   },
   {
@@ -148,9 +125,9 @@
     "print(classification_report(y_validation,y_pred))\n",
     "\n",
     "#test\n",
-    "df = pd.read_csv('test_preprocessed.csv', header=0)\n",
-    "x_validation_test=df.iloc[:,1:24]\n",
-    "y_pred_test = ada_clf.predict(x_validation_test)"
+    "y_pred_test = clf.predict(x_validation_test)\n",
+    "\n",
+    "#normal 0.89 0.47"
    ]
   },
   {
@@ -173,19 +150,95 @@
     "print(classification_report(y_validation,y_pred))\n",
     "\n",
     "#test\n",
-    "df = pd.read_csv('test_preprocessed.csv', header=0)\n",
-    "x_validation_test=df.iloc[:,1:24]\n",
     "y_pred_test = ada_clf.predict(x_validation_test)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#GradientBoostClassifier\n",
+    "\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "model = GradientBoostingClassifier(learning_rate=0.1,max_depth=10,max_features=8,n_estimators=300)\n",
+    "model.fit(x_train,y_train)\n",
+    "\n",
+    "#validation\n",
+    "y_pred = model.predict(x_validation)\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
+    "print(confusion_matrix(y_validation,y_pred))\n",
+    "print(classification_report(y_validation,y_pred))\n",
+    "\n",
+    "#test\n",
+    "y_pred_test = model.predict(x_validation_test)\n",
+    "\n",
+    "#normal 0.89 0.47"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#XGBoostClassifier\n",
+    "\n",
+    "from xgboost.sklearn import XGBClassifier\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "xgb = XGBClassifier(learning_rate=0.2, max_depth=8,n_estimators= 150,\n",
+    " min_child_weight=2, gamma=0, subsample=0.8, colsample_bytree=0.8,\n",
+    " objective= 'binary:logistic', nthread=4, scale_pos_weight=1,seed=27,reg_alpha=0.00035) \n",
+    "xgb.fit(x_train,y_train)\n",
+    "\n",
+    "#validation\n",
+    "y_pred = xgb.predict(x_validation)\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
+    "print(confusion_matrix(y_validation,y_pred))\n",
+    "print(classification_report(y_validation,y_pred))\n",
+    "\n",
+    "#test\n",
+    "y_pred_test = xgb.predict(x_validation_test)\n",
+    "\n",
+    "#normal 0.88 0.46"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "from xgboost.sklearn import XGBClassifier\n",
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "xgb=XGBClassifier()\n",
+    "parameters = {\n",
+    "    \"n_estimators\":[5,10,50,100,250],\n",
+    "    \"max_depth\":[2,4,8,16,32,None]\n",
+    "}\n",
+    "cv = GridSearchCV(rfc,parameters,cv=5)\n",
+    "cv.fit(x_train, y_train)\n",
+    "\n",
+    "#validation\n",
+    "y_pred = cv.predict(x_validation)\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_validation, y_pred))\n",
+    "print(confusion_matrix(y_validation,y_pred))\n",
+    "print(classification_report(y_validation,y_pred))\n",
+    "\n",
+    "#test\n",
+    "y_pred_test = cv.predict(x_validation_test)\n",
+    "\n",
+    "#normal 0.89 0.47"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_test=pd.DataFrame({'NEXT_MONTH_DEFAULT':y_pred_test})\n",
-    "df_test.to_csv('Submissions/Submit2.csv',index=False)"
+    "df_test.to_csv('Submissions/Submit3.csv',index=False)"
    ]
   },
   {
