--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,10 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "X=np.append(X1,X2,axis=1)\n",
     "X=np.append(X,X3,axis=1)\n",
     "X=np.append(X,X4,axis=1)\n",
@@ -276,6 +278,10 @@
     "X_test=np.append(X_test,X22_test,axis=1)\n",
     "X_test=np.append(X_test,X23_test,axis=1)\n",
     "\n",
+    "sc = StandardScaler()\n",
+    "X = sc.fit_transform(X)\n",
+    "x_test = sc.fit_transform(X_test)\n",
+    "\n",
     "datacreated=np.append(X,y,axis=1)\n",
     "datacreated_test=X_test\n",
     "\n",
@@ -285,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
