--- a/Test_data_akeshala.ipynb
+++ b/Test_data_akeshala.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"Encoded Data Combined/Final Combined Data/new_test_data_akeshala_nipun_samal.csv\", encoding='latin-1')\n",
-    "x_test = df.drop(columns=[\"Reservation-id\"]).iloc[:,2:]"
+    "x_test = df.drop(columns=[\"Reservation-id\"]).iloc[:,1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "id_list=df['Reservation-id'].to_numpy()\n",
-    "data = list(zip(id_list,y_pred+1))\n",
+    "data = list(zip(id_list,y_pred))\n",
     "result=pd.DataFrame(data, columns=['Reservation-id','Reservation_Status'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -100,22 +100,22 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>70586099</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>4230648</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>25192322</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>80931528</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -125,17 +125,17 @@
        "    <tr>\n",
        "      <th>4313</th>\n",
        "      <td>39110574</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4314</th>\n",
        "      <td>5496554</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4315</th>\n",
        "      <td>59004046</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4316</th>\n",
@@ -145,7 +145,7 @@
        "    <tr>\n",
        "      <th>4317</th>\n",
        "      <td>14474101</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -155,21 +155,21 @@
       "text/plain": [
        "      Reservation-id  Reservation_Status\n",
        "0           62931593                   2\n",
-       "1           70586099                   3\n",
-       "2            4230648                   1\n",
-       "3           25192322                   3\n",
-       "4           80931528                   1\n",
+       "1           70586099                   1\n",
+       "2            4230648                   2\n",
+       "3           25192322                   1\n",
+       "4           80931528                   2\n",
        "...              ...                 ...\n",
-       "4313        39110574                   3\n",
-       "4314         5496554                   2\n",
-       "4315        59004046                   1\n",
+       "4313        39110574                   0\n",
+       "4314         5496554                   0\n",
+       "4315        59004046                   2\n",
        "4316        65838682                   1\n",
-       "4317        14474101                   1\n",
+       "4317        14474101                   0\n",
        "\n",
        "[4318 rows x 2 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
